feat: 多租户客户配置管理功能完整实现 v1.3.7
🏢 多租户客户配置管理系统
- 客户配置新增: 完整的客户配置创建功能，支持多字段配置
- 同步组织创建: 客户配置保存成功后自动创建对应组织机构
- 智能配置同步: 通过事件监听器自动同步相关配置，防循环创建

🔧 技术架构优化
- 字段映射处理: supportLicense ↔ isSupportLicense字段映射
- 数据库约束修复: 解决license_key字段无默认值错误
- 防循环依赖: OrgUnitsChangeListener增加存在性检查

相关改动:
- TCustomerConfig.java - 添加字段映射注解
- TCustomerConfigAddDTO.java - 完善新增字段
- TCustomerConfigServiceImpl.java - 同步创建组织逻辑
- TCustomerConfigFacadeImpl.java - 字段映射处理
- OrgUnitsChangeListener.java - 防循环创建优化
- README.md - 更新版本至v1.3.7